--- a/Italian/device/flo/MiuiGallery.apk/res/values-it/strings.xml
+++ b/Italian/device/flo/MiuiGallery.apk/res/values-it/strings.xml
@@ -56,7 +56,7 @@
     <string name="no_thumbnail">Nessuna miniatura</string>
     <string name="crop_save_text">Taglia e salva</string>
     <string name="multiface_crop_help">Tocca un viso per iniziare.</string>
-    <string name="saving_image">Salvataggio foto...</string>
+    <string name="saving_image">Salvataggio foto…</string>
     <string name="save_error">Impossibile salvare immagine ritagliata.</string>
     <string name="crop_label">Ritaglia foto</string>
     <string name="select_image">Seleziona foto</string>
@@ -189,15 +189,15 @@
     <string name="damaged_file">File corrotto</string>
     <string name="must_pick_file">"Seleziona un'immagine"</string>
     <string name="set_lock_or_wallpaper">Imposta sfondo</string>
-    <string name="set_lock_and_wallpaper">Impostazione come Sfondo Lockscreen...</string>
-    <string name="set_wallpaper">Impostazione come Sfondo Home...</string>
+    <string name="set_lock_and_wallpaper">Impostazione come Sfondo Lockscreen…</string>
+    <string name="set_wallpaper">Impostazione come Sfondo Home…</string>
     <string name="set_lockscreen">Imposta lockscreen</string>
     <string name="wallpaper">Sfondo Home</string>
     <string name="contact_photo">Foto contatto</string>
     <string name="projection">Proiezione</string>
     <string name="cut">Taglia e salva</string>
     <string name="more">Altro</string>
-    <string name="deleting_files">Eliminazione file...</string>
+    <string name="deleting_files">Eliminazione file…</string>
     <string name="bigscreen_slide_playing">Lo slideshow è in esecuzione su questo dispositivo: %s</string>
     <string name="bigscreen_slide_exit">Esci dallo slideshow via TV</string>
     <string name="bigscreen_slide_fail_cause_loading">"Carica la presentazione dopo che l'immagine è stata caricata".</string>
@@ -221,7 +221,7 @@
     <string name="clear_thumbnail_cache">Cancella cache delle anteprime</string>
     <string name="clear_thumbnail_cache_summary">Consultando la galleria verranno create delle anteprime. Cancellando la cache aumenterà lo spazio libero.</string>
     <string name="clear_thumbnail_cache_confirm">La cache delle anteprime verrà cancellata. La Galleria eseguirà una nuova scansione media e ricreerà le anteprime.</string>
-    <string name="cleaning_cache">Cancellazione cache...</string>
+    <string name="cleaning_cache">Cancellazione cache…</string>
     <string name="seconds">secondi</string>
     <string name="screensaver_category">Screensaver</string>
     <string name="screensaver_activate_mode">Screensaver</string>
@@ -234,7 +234,7 @@
     <string name="slideshow_time_select_title">Seleziona la durata dello slideshow</string>
     <string name="slideshow_time_title">Durata slideshow</string>
     <string name="there_is_no_image">Nessuna immagine</string>
-    <string name="preparing_data_to_delete">"Preparazione all'eliminazione dell'immagine..."</string>
+    <string name="preparing_data_to_delete">"Preparazione all'eliminazione dell'immagine…"</string>
     <string name="rename_failed">Impossibile rinominare</string>
     <string name="rename_failed_duplicated_name">Esiste già un file con questo nome.</string>
     <string name="warn">Avviso</string>
@@ -316,7 +316,7 @@
     <string name="cannot_delete_sharer_photo">Impossibile eliminare %s elemento(i) caricati da altri utenti.</string>
     <string name="share_album">Condividi album</string>
     <string name="share_album_owner">Proprietario</string>
-    <string name="loading_members">Caricamento membri...</string>
+    <string name="loading_members">Caricamento membri…</string>
     <string name="scan_qr_code_buttom_text">Scansiona il QR code per vedere questo album.</string>
     <string name="request_qr_code_failed">Richiesta QR code fallita, premi per riprovare</string>
     <string name="retry_to_request_qr_code">Riprova</string>
@@ -326,12 +326,12 @@
     <string name="already_apply_album">Aprire %1$s?</string>
     <string name="no_picture_or_video">Nessuna immagine o video</string>
     <string name="camera_view_none_message">Le foto scattate verranno visualizzate qui.</string>
-    <string name="sync_in_progress_message">Sincronizzazione in corso...</string>
+    <string name="sync_in_progress_message">Sincronizzazione in corso…</string>
     <string name="none_picture">Nessuna immagine trovata in Galleria</string>
     <string name="show_hidden_albums">Mostra album nascosti</string>
     <string name="not_show_hidden_albums">Non mostrare album nascosti</string>
     <string name="fail_to_sync_album">"Impossibile sincronizzare l'album con il server. Verifica la tua connessione di rete!"</string>
-    <string name="sync_album_in_proecess">"L'album è in fase di sincronizzazione, attendere prego...</string>
+    <string name="sync_album_in_proecess">"L'album è in fase di sincronizzazione, attendere prego…</string>
     <string name="retry_to_create_album">Riprova</string>
     <string name="share_current_album">Condividi contenuto album</string>
     <string name="cloud_share_guide_title">Condivisione MiCloud!</string>
@@ -351,7 +351,7 @@ i tuoi amici.Consultalo e aggiornalo
     <string name="create_new_cloud_folder">Crea nuova cartella Cloud</string>
     <string name="input_cloudfolder_name">Nome cartella Cloud</string>
     <string name="cloudfolder_already_exists">Cartella Cloud già esistente</string>
-    <string name="loading_thumbnail">Caricamento anteprima...</string>
+    <string name="loading_thumbnail">Caricamento anteprima…</string>
     <string name="video_not_exist">Video inesistente!</string>
     <string name="loading_video">Download video…</string>
     <string name="loading_image">Download immagine…</string>
@@ -380,7 +380,7 @@ i tuoi amici.Consultalo e aggiornalo
     <string name="by_others">Altro</string>
     <string name="enter_email_hint">"Inserisci indirizzo E-mail "</string>
     <string name="messagelist_sender_self">Io</string>
-    <string name="adding_recipients">Inserimento destinatari...</string>
+    <string name="adding_recipients">Inserimento destinatari…</string>
     <string name="pick_too_many_recipients">Troppi destinatari</string>
     <string name="cannot_send_message">Impossibile inviare il messaggio</string>
     <string name="has_invalid_recipient">Destinatari non validi:%1$s</string>
@@ -397,12 +397,12 @@ i tuoi amici.Consultalo e aggiornalo
     <string name="email_picker_title">Aggiungi email</string>
     <string name="request_sms_url_failed">Impossibile richiedere url per condivisione tramite SMS</string>
     <string name="request_sms_url_title">Suggerimento</string>
-    <string name="request_sms_url_msg">Richiesta url per condivisione SMS, attendere prego...</string>
+    <string name="request_sms_url_msg">Richiesta url per condivisione SMS, attendere prego…</string>
     <string name="fail_to_pick_email">E-mail selezionata non valida</string>
     <string name="share_by_email_successfully">Condivisione %1$s tramite E-mail completata</string>
     <string name="share_by_email_start">Tentativo di condivisione n background per %1$s </string>
     <string name="exit_share">"Esci dall'album"</string>
-    <string name="exit_share_in_process">"Uscita dall'album in corso, attendere prego..."</string>
+    <string name="exit_share_in_process">"Uscita dall'album in corso, attendere prego…"</string>
     <string name="exit_share_successfully">"Uscita dall'album %1$s completata"</string>
     <string name="exit_share_failed">"Uscita dall'album %1$s fallita"</string>
     <string name="cancel_hint">Operazione annullata</string>
@@ -414,17 +414,17 @@ i tuoi amici.Consultalo e aggiornalo
     <string name="accept">Accetta</string>
     <string name="deny">Rifiuta</string>
     <string name="enable_cloud_for_sharing">"Abilita l'album per vedere le immagini condivise."</string>
-    <string name="operation_in_process">Elaborazione...</string>
+    <string name="operation_in_process">Elaborazione…</string>
     <string name="operation_failed">Operazione fallita!</string>
     <string name="operation_successful">Condiviso correttamente!</string>
     <string name="invalid_invition_url">URL di invito non valido.</string>
     <string name="user_alias_self">Io</string>
     <string name="kick_owner_user_title">Rimuovere questo membro?</string>
     <string name="kick_owner_user_positive_button_text">Rimuovi</string>
-    <string name="initializing_cloud">Inizializzazione Album Cloud...</string>
+    <string name="initializing_cloud">Inizializzazione Album Cloud…</string>
     <string name="open_public_title">Condividi pubblicamente</string>
     <string name="open_public_message">Genera un URL ed invialo agli amici</string>
-    <string name="publishing">Pubblicazione in corso, attendere prego...</string>
+    <string name="publishing">Pubblicazione in corso, attendere prego…</string>
     <string name="publish_succeeded">Album pubblicato</string>
     <string name="publish_failed">Pubblicazione fallita.</string>
     <string name="unpublish_succeeded">Album rimosso!</string>
@@ -432,22 +432,22 @@ i tuoi amici.Consultalo e aggiornalo
     <string name="send_public_url">Invia URL album</string>
     <string name="public_url_descript">Chiunque può accedere al tuo album utilizzando questo URL</string>
     <string name="share_public_url_text">"Ho condiviso l'album %1$s. Esplora %2$s"</string>
-    <string name="unpublishing">Annullamento pubblicazione, attendere prego...</string>
+    <string name="unpublishing">Annullamento pubblicazione, attendere prego…</string>
     <string name="operation_too_often">"L'operazione supera il limite di frequenza, riprova tra 1 minuto."</string>
     <string name="cannot_remove_creator">Impossibile rimuovere il proprietario</string>
     <string name="exit">Esci</string>
     <string name="album_share_exit_confirm">Confermi di voler annullare la condivisione di questo album?</string>
-    <string name="get_album_info_in_process">Richiesta informazioni album condiviso, attendere prego...</string>
+    <string name="get_album_info_in_process">Richiesta informazioni album condiviso, attendere prego…</string>
     <string name="album_share_stat_content">Inviti di condivisione album</string>
     <string name="album_share_kicked">Sei stato rimosso da %1$s</string>
     <string name="album_share_title_new_album">Nuovo album condiviso</string>
     <string name="album_share_subtitle_not_ready">Informazioni album non pronte. Premi per scaricare.</string>
-    <string name="album_share_subtitle_requesting">Download informazioni album...</string>
+    <string name="album_share_subtitle_requesting">Download informazioni album…</string>
     <string name="album_share_subtitle_invited">Condiviso da %1$s, accettare o ignorare?</string>
     <string name="album_share_subtitle_normal">Condiviso da %1$s</string>
-    <string name="album_share_subtitle_accepting">Accettazione invito da %1$s...</string>
-    <string name="album_share_subtitle_denying">Ignora invito da %1$s...</string>
-    <string name="album_share_subtitle_quitting">Chiusura invito da %1$s...</string>
+    <string name="album_share_subtitle_accepting">Accettazione invito da %1$s…</string>
+    <string name="album_share_subtitle_denying">Ignora invito da %1$s…</string>
+    <string name="album_share_subtitle_quitting">Chiusura invito da %1$s…</string>
     <string name="system_album">Album di sistema</string>
     <string name="owner_album_subtitle">Condiviso con %1$s membri</string>
     <string name="album_quota_fulfiled">"Impossibile creare l'album; è stato raggiunto il numero massimo.."</string>
