--- a/Italian/device/flo/XiaomiAccount.apk/res/values-it/strings.xml
+++ b/Italian/device/flo/XiaomiAccount.apk/res/values-it/strings.xml
@@ -39,9 +39,9 @@
     <string name="micloud_error_email">Email non valida</string>
     <string name="micloud_account">Account XiaoMi</string>
     <string name="micloud_activing_account">Attivazione account</string>
-    <string name="micloud_activing_account_delayed">"Il tempo di attivazione è di circa 30 secondi. Nel frattempo tu puoi fare qualcos'altro..."</string>
+    <string name="micloud_activing_account_delayed">"Il tempo di attivazione è di circa 30 secondi. Nel frattempo tu puoi fare qualcos'altro…"</string>
     <string name="micloud_activing_account_failed">Impossibile attivare il tuo account</string>
-    <string name="micloud_activating_account_notify_title">Attivazione account in corso...</string>
+    <string name="micloud_activating_account_notify_title">Attivazione account in corso…</string>
     <string name="micloud_activate_account_success_notify_title">Account Xiaomi attivato con successo</string>
     <string name="micloud_activate_account_fail_notify_title">Impossibile attivare il tuo account Xiaomi</string>
     <string name="micloud_activating_account_notify_info">Stai attivando il tuo account Xiaomi</string>
@@ -90,11 +90,11 @@
     <string name="remove_account_notice">Cosa vuoi fare con i dati precedentemente sincronizzati (contatti, registro delle chiamate e note) ?</string>
     <string name="data_keep_in_phone">Mantieni i dati sul telefono</string>
     <string name="data_wipe_from_phone">Elimina i dati dal telefono</string>
-    <string name="login_notice">Accesso...</string>
+    <string name="login_notice">Accesso…</string>
     <string name="i_know">OK</string>
     <string name="failed_to_send_activate_email">Invio Email di attivazione fallito</string>
     <string name="access_denied">Accesso negato</string>
-    <string name="reging">Registrazione in corso, attendere prego...</string>
+    <string name="reging">Registrazione in corso, attendere prego…</string>
     <string name="reg_success">Registrazione completata</string>
     <string name="reg_success_summary">"%1$s è stato collegato al tuo account.
 Puoi utilizzarlo per accedere e recuperare la password."</string>
@@ -132,8 +132,8 @@ Puoi utilizzarlo per accedere e recuperare la password."</string>
     <string name="relogin">Accedi di nuovo</string>
     <string name="skip_login">Salta accesso</string>
     <string name="skip_login_u">&lt;u>Salta accesso&lt;/u></string>
-    <string name="removing_account">Rimozione account...</string>
-    <string name="checking_account">Verifica account...</string>
+    <string name="removing_account">Rimozione account…</string>
+    <string name="checking_account">Verifica account…</string>
     <string name="button_cancel">Annulla</string>
     <string name="mili_center">MiCredit</string>
     <string name="sina_weibo">Sina Weibo</string>
@@ -159,8 +159,8 @@ Puoi utilizzarlo per accedere e recuperare la password."</string>
     <string name="vcode_prompt_long">Inserisci il codice di verifica generato tramite il sistema di sicurezza Xiaomi</string>
     <string name="vcode_notification_title">Il tuo accesso di verifica è incompleto</string>
     <string name="activate_phone_failed_notif_title_msim">Impossibile avviare MiCloud per SIM %s</string>
-    <string name="activate_status_title_activating">Attivazione SIM, attendere prego...</string>
-    <string name="activate_status_title_activating_msim">Attivazione SIM %s...</string>
+    <string name="activate_status_title_activating">Attivazione SIM, attendere prego…</string>
+    <string name="activate_status_title_activating_msim">Attivazione SIM %s…</string>
     <string name="activate_status_desc_getting_device_info">Recupero info dispositivo</string>
     <string name="activate_status_desc_failed_getting_device_info">Impossibile recuperare info dispositivo</string>
     <string name="activate_status_desc_getting_sim_info">Recupero info SIM</string>
@@ -172,28 +172,28 @@ Puoi utilizzarlo per accedere e recuperare la password."</string>
     <string name="activate_status_desc_sms_sent">SMS di attivazione inviato correttamente</string>
     <string name="activate_status_desc_sim_absent">Impossibile trovare SIM</string>
     <string name="activate_status_desc_acquire_phone_number">Recupero numero dal server</string>
-    <string name="activate_status_desc_acquire_phone_number_server_error_wait">"Si è verificato un errore del server durante l'acquisizione del numero.  Nuovo tentativo..."</string>
-    <string name="activate_status_desc_acquire_phone_number_server_io_error_wait">"Si è verificato un I/O server durante l'acquisizione del numero di telefono. Nuovo tentativo..."</string>
-    <string name="activate_status_desc_acquire_phone_number_server_no_info_wait">Impossibile recuperare numero di telefono. Nuovo tentativo..."</string>
+    <string name="activate_status_desc_acquire_phone_number_server_error_wait">"Si è verificato un errore del server durante l'acquisizione del numero.  Nuovo tentativo…"</string>
+    <string name="activate_status_desc_acquire_phone_number_server_io_error_wait">"Si è verificato un I/O server durante l'acquisizione del numero di telefono. Nuovo tentativo…"</string>
+    <string name="activate_status_desc_acquire_phone_number_server_no_info_wait">Impossibile recuperare numero di telefono. Nuovo tentativo…"</string>
     <string name="activate_status_desc_acquire_phone_number_server_error">"Si è verificato un errore del server durante l'acquisizione del numero di telefono"</string>
     <string name="activate_status_desc_acquire_phone_number_server_io_error">"Si è verificato un I/O server durante l'acquisizione del numero di telefono"</string>
     <string name="activate_status_desc_acquire_phone_number_server_no_info">Non è stato possibile recuperare il numero di telefono</string>
     <string name="activate_status_desc_acquire_sim_user_id">Acquisizione informazioni di registrazione dal server</string>
-    <string name="activate_status_desc_acquire_sim_user_id_server_error_wait">"Si è verificato un errore del server durante l'acquisizione delle informazioni di registrazione. Nuovo tentativo..."</string>
-    <string name="activate_status_desc_acquire_sim_user_id_server_io_error_wait">"Si è verificato un I/O server durante l'acquisizione delle informazioni di registrazione. Nuovo tentativo..."</string>
-    <string name="activate_status_desc_acquire_sim_user_id_server_no_info_wait">Non è stato possibile recuperare le informazioni di registrazione. Nuovo tentativo..."</string>
+    <string name="activate_status_desc_acquire_sim_user_id_server_error_wait">"Si è verificato un errore del server durante l'acquisizione delle informazioni di registrazione. Nuovo tentativo…"</string>
+    <string name="activate_status_desc_acquire_sim_user_id_server_io_error_wait">"Si è verificato un I/O server durante l'acquisizione delle informazioni di registrazione. Nuovo tentativo…"</string>
+    <string name="activate_status_desc_acquire_sim_user_id_server_no_info_wait">Non è stato possibile recuperare le informazioni di registrazione. Nuovo tentativo…"</string>
     <string name="activate_status_desc_acquire_sim_user_id_server_error">"Si è verificato un errore del server durante l'acquisizione delle informazioni di registrazione"</string>
     <string name="activate_status_desc_acquire_sim_user_id_server_io_error">"Si è verificato un I/O server durante l'acquisizione del numero di telefono"</string>
     <string name="activate_status_desc_acquire_sim_user_id_server_no_info">Non è stato possibile recuperare le informazioni di registrazione</string>
     <string name="activate_status_desc_acquire_sim_pass_token">Acquisizione informazioni di sicurezza dal server</string>
-    <string name="activate_status_desc_acquire_sim_pass_token_server_error_wait">"Si è verificato un errore del server durante l'acquisizione delle informazioni di sicurezza. Nuovo tentativo..."</string>
-    <string name="activate_status_desc_acquire_sim_pass_token_server_io_error_wait">"Si è verificato un erroore di I/O lato server durante l'acquisizione delle informazioni di sicurezza. Nuovo tentativo..."</string>
-    <string name="activate_status_desc_acquire_sim_pass_token_server_no_info_wait">Non è stato possibile recuperare le informazioni di sicurezza. Nuovo tentativo..."</string>
+    <string name="activate_status_desc_acquire_sim_pass_token_server_error_wait">"Si è verificato un errore del server durante l'acquisizione delle informazioni di sicurezza. Nuovo tentativo…"</string>
+    <string name="activate_status_desc_acquire_sim_pass_token_server_io_error_wait">"Si è verificato un erroore di I/O lato server durante l'acquisizione delle informazioni di sicurezza. Nuovo tentativo…"</string>
+    <string name="activate_status_desc_acquire_sim_pass_token_server_no_info_wait">Non è stato possibile recuperare le informazioni di sicurezza. Nuovo tentativo…"</string>
     <string name="activate_status_desc_acquire_sim_pass_token_server_error">"Si è verificato un errore del server durante l'acquisizione delle informazioni di sicurezza"</string>
     <string name="activate_status_desc_acquire_sim_pass_token_server_io_error">"Si è verificato un I/O server durante l'acquisizione delle informazioni di sicurezza"</string>
     <string name="activate_status_desc_acquire_sim_pass_token_server_no_info">Non è stato possibile recuperare le informazioni di sicurezza</string>
     <string name="activate_status_desc_acquire_sim_pass_token_password_error">Non è stato possibile recuperare le informazioni di sicurezza: token password non valido"</string>
-    <string name="checking_input">Verifica inserimento...</string>
+    <string name="checking_input">Verifica inserimento…</string>
     <string name="wipe_data_dialog_title">Alcuni elementi non sono stati sincronizzati</string>
     <string name="wipe_data_dialog_msg">%s elementi verranno persi se prosegui.</string>
     <string name="dirty_contacts_count">%d contatti</string>
