--- a/Italian/main/Backup.apk/res/values-it/strings.xml
+++ b/Italian/main/Backup.apk/res/values-it/strings.xml
@@ -21,7 +21,7 @@
     <string name="menu_patch_delete">Elimina backup</string>
     <string name="delete">Elimina</string>
     <string name="cancel">Annulla</string>
-    <string name="delete_backup_process">Eliminazione in corso...</string>
+    <string name="delete_backup_process">Eliminazione in corso…</string>
     <string name="backup_error">Errore Backup</string>
     <string name="delete_failed_backup_confirm">Si è verificato un errore, impossibile ripristinare da questo backup</string>
     <string name="batch_delete_backup_confirm">Eliminare %d backup?</string>
@@ -31,7 +31,7 @@
     <string name="unit_piece">" Elemento(i)"</string>
     <string name="restore_finished">Ripristino completato</string>
     <string name="restore_report">Rapporto Recovery</string>
-    <string name="restore_progress">Ripristino...</string>
+    <string name="restore_progress">Ripristino…</string>
     <string name="restore_contacts_hit">"(Nota: Devi ripristinare manualmente i Contatti inseriti prima dell'account originale)"</string>
     <string name="restore_telephony_hit">"(Nota: Il processo di ripristino riavvierà l'applicazione Telefono)"</string>
     <string name="restore_launcher_layout_hit">(Nota: Ripristina il layout del launcher)</string>
@@ -39,9 +39,9 @@
     <string name="account_summary">Backup Gmail, Email e Account Xiaomi</string>
     <string name="cloud_app_name">Backup Online</string>
     <string name="cloud_home_title">Online</string>
-    <string name="prompt_reading">Lettura in corso...</string>
-    <string name="prompt_sending">Upload in corso...</string>
-    <string name="prompt_writing">Scrittura in corso...</string>
+    <string name="prompt_reading">Lettura in corso…</string>
+    <string name="prompt_sending">Upload in corso…</string>
+    <string name="prompt_writing">Scrittura in corso…</string>
     <string name="backup_new">Nuovo</string>
     <string name="backup_update">Aggiorna</string>
     <string name="backup_delete">Elimina</string>
@@ -65,7 +65,7 @@
     <string name="wifi_title">Impostazioni Wi-Fi</string>
     <string name="note_title">Note</string>
     <string name="compute_backup_info">Recupero info backup</string>
-    <string name="compute_delete_contact_info">Ricerca contatti...</string>
+    <string name="compute_delete_contact_info">Ricerca contatti…</string>
     <string name="unknown_hint">Sconosciuto</string>
     <string name="task_progress">Avanzamento</string>
     <string name="task_pending">In attesa</string>
@@ -96,8 +96,8 @@
     <string name="task_local_backup_cancel_dialog">"Backup non ancora completato Premi OK per annullare il processo"</string>
     <string name="task_cloud_backup_cancel_dialog">"Backup non ancora completato Premi OK per annullare il processo"</string>
     <string name="task_restore_cancel_dialog">"Ripristino non completato l'annullamento del ripristino potrebbe danneggiare alcuni dati"</string>
-    <string name="task_backup_cancel_progress">Eliminazione backup...</string>
-    <string name="task_restore_cancel_progress">Eliminazione...</string>
+    <string name="task_backup_cancel_progress">Eliminazione backup…</string>
+    <string name="task_restore_cancel_progress">Eliminazione…</string>
     <string name="nothing_searched">Nessun risultato trovato</string>
     <string name="restore_counts">Ripristino:</string>
     <string name="service_stoped">Servizio interrotto</string>
@@ -115,11 +115,11 @@
     <string name="button_return">Indietro</string>
     <string name="button_next">Avanti</string>
     <string name="button_finish">Finito</string>
-    <string name="progress_backup_hint">Backup in corso...</string>
+    <string name="progress_backup_hint">Backup in corso…</string>
     <string name="cancel_backup">Annulla Backup</string>
     <string name="restore_contact">Ripristino contatti</string>
     <string name="restore_contact_content">"Il ripristino contatti potrebbe produrre dei duplicati, sicuro di voler procedere?.Nota: Puoi verificare la presenza di duplicati nella lista contatti"</string>
-    <string name="progress_restore_hint">Ripristino in corso...</string>
+    <string name="progress_restore_hint">Ripristino in corso…</string>
     <string name="cancel_restore">Annulla ripristino</string>
     <string name="restore_failed">Ripristino fallito!</string>
     <string name="local_select_sysdata">Sistema</string>
@@ -139,11 +139,11 @@
     <string name="auto_backup_select_user_apps">Seleziona applicazioni</string>
     <string name="auto_backup_system_data">Sistema</string>
     <string name="auto_backup_user_data">Applicazioni</string>
-    <string name="auto_backup_progress">Backup automatico in corso, attendere...</string>
+    <string name="auto_backup_progress">Backup automatico in corso, attendere…</string>
     <string name="backup">Backup</string>
     <string name="restore">Ripristino</string>
     <string name="cloud_last_backup">Ultimo backup:</string>
-    <string name="cloud_search">Ricerca Online...</string>
+    <string name="cloud_search">Ricerca Online…</string>
     <string name="cloud_no_backup">Nessu backup online</string>
     <string name="current_account">Accesso come: %s</string>
     <string name="current_sim">SIM card</string>
