--- a/Italian/main/Calendar.apk/res/values-it/strings.xml
+++ b/Italian/main/Calendar.apk/res/values-it/strings.xml
@@ -290,7 +290,7 @@
     <string name="work_day_indication">:(</string>
     <string name="rest_day_indication">:)</string>
     <string name="edit_event_confirm_message">Annullare le modifiche di questo evento?</string>
-    <string name="more_string">Altri %1$s...</string>
+    <string name="more_string">Altri %1$s…</string>
     <string name="copy_email">Copia indirizzo email</string>
     <string name="copy_number">Copia numero di telefono</string>
     <string name="done">Completato</string>
