--- a/Italian/main/InCallUI.apk/res/values-it/strings.xml
+++ b/Italian/main/InCallUI.apk/res/values-it/strings.xml
@@ -88,11 +88,11 @@
     <string name="no_vm_number">Numero segreteria mancante</string>
     <string name="no_vm_number_msg">Nessun numero di segreteria presente nella SIM.</string>
     <string name="add_vm_number_str">Aggiungi numero</string>
-    <string name="puk_unlocked">La SIM è stata sbloccata. Sblocco del telefono in corso...</string>
+    <string name="puk_unlocked">La SIM è stata sbloccata. Sblocco del telefono in corso…</string>
     <string name="label_ndp">PIN sblocco rete SIM</string>
     <string name="sim_ndp_unlock_text">Sblocca</string>
     <string name="sim_ndp_dismiss_text">Chiudi</string>
-    <string name="requesting_unlock">Richiesta sblocco rete in corso...</string>
+    <string name="requesting_unlock">Richiesta sblocco rete in corso…</string>
     <string name="unlock_failed">Sblocco rete fallito.</string>
     <string name="unlock_success">Sblocco rete eseguito con successo.</string>
     <string name="labelGSMMore">Impostazioni chiamate GSM</string>
@@ -141,9 +141,9 @@
     <string name="disable_cfnrc_forbidden">Il tuo operatore non supporta il trasferimento di chiamata quando il telefono non è raggiungibile.</string>
     <string name="updating_title">Aggiorna impostazioni chiamata</string>
     <string name="error_updating_title">Errore impostazioni di chiamata</string>
-    <string name="reading_settings">Lettura impostazioni...</string>
-    <string name="updating_settings">Aggiornamento impostazioni...</string>
-    <string name="reverting_settings">Recupero impostazioni...</string>
+    <string name="reading_settings">Lettura impostazioni…</string>
+    <string name="updating_settings">Aggiornamento impostazioni…</string>
+    <string name="reverting_settings">Recupero impostazioni…</string>
     <string name="response_error">Risposta inattesa dalla rete.</string>
     <string name="exception_error">Errore di rete o di SIM.</string>
     <string name="stk_cc_ss_to_dial_error">Richiesta SS modificata in una richiesta DIAL.</string>
@@ -167,11 +167,11 @@ Passare comunque al nuovo operatore?"</string>
     <string name="voicemail_default">Il mio gestore</string>
     <string name="mobile_networks">Impostazioni reti mobili</string>
     <string name="label_available">Reti disponibili</string>
-    <string name="load_networks_progress">Ricerca...</string>
+    <string name="load_networks_progress">Ricerca…</string>
     <string name="empty_networks_list">Nessuna rete trovata.</string>
     <string name="search_networks">Cerca reti</string>
     <string name="network_query_error">Errore durante la ricerca di reti.</string>
-    <string name="register_on_network">Registrazione su %s...</string>
+    <string name="register_on_network">Registrazione su %s…</string>
     <string name="not_allowed">La SIM non consente la connessione a questa rete.</string>
     <string name="connect_later">Impossibile connettersi a questa rete adesso. Riprova più tardi.</string>
     <string name="registration_done">Registrato sulla rete.</string>
@@ -179,7 +179,7 @@ Passare comunque al nuovo operatore?"</string>
     <string name="sum_search_networks">Cerca tutte le reti disponibili</string>
     <string name="select_automatically">Seleziona automaticamente</string>
     <string name="sum_select_automatically">Seleziona automaticamente la rete preferita</string>
-    <string name="register_automatically">Registrazione automatica...</string>
+    <string name="register_automatically">Registrazione automatica…</string>
     <string name="preferred_network_mode_title">Modalità di Rete</string>
     <string name="preferred_network_mode_summary">Cambia la modalità di rete</string>
     <string name="preferred_network_mode_dialogtitle">Modalità di rete preferita</string>
@@ -326,13 +326,13 @@ Il periodo succ. inizia tra %2$d gg (%3$s)"</string>
     <string name="number">Numero</string>
     <string name="save">Salva</string>
     <string name="add_fdn_contact">Aggiungi numero selezione fissa</string>
-    <string name="adding_fdn_contact">Aggiunta numero selezione fissa...</string>
+    <string name="adding_fdn_contact">Aggiunta numero selezione fissa…</string>
     <string name="fdn_contact_added">Numero di selezione fissa aggiunto.</string>
     <string name="edit_fdn_contact">Modifica numero selezione fissa</string>
-    <string name="updating_fdn_contact">Aggiornamento numero selezione fissa...</string>
+    <string name="updating_fdn_contact">Aggiornamento numero selezione fissa…</string>
     <string name="fdn_contact_updated">Numero di selezione fissa aggiornato.</string>
     <string name="delete_fdn_contact">Elimina numero selezione fissa</string>
-    <string name="deleting_fdn_contact">Eliminazione numero selezione fissa...</string>
+    <string name="deleting_fdn_contact">Eliminazione numero selezione fissa…</string>
     <string name="fdn_contact_deleted">Numero di selezione fissa eliminato.</string>
     <string name="pin2_invalid">NSF non aggiornato: il PIN inserito non è corretto.</string>
     <string name="fdn_invalid_number">NSF non aggiornato: il numero non deve superare le 20 cifre.</string>
@@ -410,7 +410,7 @@ Il periodo succ. inizia tra %2$d gg (%3$s)"</string>
     <string name="incall_error_out_of_service">Rete cellulare non disponibile.</string>
     <string name="incall_error_no_phone_number_supplied">Chiamata non inviata. Nessun numero valido inserito.</string>
     <string name="incall_error_call_failed">Chiamata non inviata.</string>
-    <string name="incall_status_dialed_mmi">Inizio sequenza MMI...</string>
+    <string name="incall_status_dialed_mmi">Inizio sequenza MMI…</string>
     <string name="incall_error_supp_service_unknown">Servizio non supportato.</string>
     <string name="incall_error_supp_service_switch">"Impossibile passare all'altra chiamata."</string>
     <string name="incall_error_supp_service_separate">Impossibile separare le chiamate.</string>
@@ -420,8 +420,8 @@ Il periodo succ. inizia tra %2$d gg (%3$s)"</string>
     <string name="incall_error_supp_service_hangup">Impossibile riprendere le chiamate.</string>
     <string name="incall_call_type_label_sip">Chiamata Internet</string>
     <string name="emergency_enable_radio_dialog_title">Chiamata emergenza</string>
-    <string name="emergency_enable_radio_dialog_message">Attivazione segnale cellulare...</string>
-    <string name="emergency_enable_radio_dialog_retry">Area non coperta dal servizio. Nuovo tentativo...</string>
+    <string name="emergency_enable_radio_dialog_message">Attivazione segnale cellulare…</string>
+    <string name="emergency_enable_radio_dialog_retry">Area non coperta dal servizio. Nuovo tentativo…</string>
     <string name="dial_emergency_error">Chiamata non inviata. %s non è un numero di emergenza.</string>
     <string name="dial_emergency_empty_error">Chiamata non inviata. Componi un numero di emergenza.</string>
     <string name="dialerKeyboardHintText">Usa tastiera</string>
@@ -506,17 +506,17 @@ Il periodo succ. inizia tra %2$d gg (%3$s)"</string>
     <string name="add_sip_account">Aggiungi account</string>
     <string name="remove_sip_account">Rimuovi account</string>
     <string name="sip_account_list">Account SIP</string>
-    <string name="saving_account">Salvataggio account...</string>
-    <string name="removing_account">Rimozione account...</string>
+    <string name="saving_account">Salvataggio account…</string>
+    <string name="removing_account">Rimozione account…</string>
     <string name="sip_menu_save">Salva</string>
     <string name="sip_menu_discard">Elimina</string>
     <string name="alert_dialog_close">Chiudi profilo</string>
     <string name="alert_dialog_ok">Ok</string>
     <string name="close_profile">Chiudi</string>
     <string name="primary_account_summary_with">Account principale %s</string>
-    <string name="registration_status_checking_status">Controllo stato...</string>
-    <string name="registration_status_registering">Registrazione...</string>
-    <string name="registration_status_still_trying">Tentativo in corso...</string>
+    <string name="registration_status_checking_status">Controllo stato…</string>
+    <string name="registration_status_registering">Registrazione…</string>
+    <string name="registration_status_still_trying">Tentativo in corso…</string>
     <string name="registration_status_not_receiving">Impossibile ricevere chiamate</string>
     <string name="registration_status_no_data">"La registrazione account si è interrotta perchè non c'è connessione internet"</string>
     <string name="registration_status_no_wifi_data">"La registrazione account si è interrotta perchè non c'è connessione Wi-Fi"</string>
@@ -576,7 +576,7 @@ Il periodo succ. inizia tra %2$d gg (%3$s)"</string>
     <string name="respond_via_sms_canned_response_2">Ti richiamo al più presto</string>
     <string name="respond_via_sms_canned_response_3">Ti richiamo più tardi</string>
     <string name="respond_via_sms_canned_response_4">Adesso non posso parlare. Puoi richiamarmi più tardi?</string>
-    <string name="respond_via_sms_custom_message">Messaggio personalizzato...</string>
+    <string name="respond_via_sms_custom_message">Messaggio personalizzato…</string>
     <string name="custom_message_cancel">Annulla</string>
     <string name="custom_message_send">Invia</string>
     <string name="respond_via_sms_setting_title">Risposta veloce</string>
