--- a/Italian/main/Notes.apk/res/values-it/strings.xml
+++ b/Italian/main/Notes.apk/res/values-it/strings.xml
@@ -10,7 +10,7 @@
     <string name="widget_havenot_content">Nessuna nota associata trovata, premere per crearne una.</string>
     <string name="widget_under_visit_mode">Modalità Guard, il contenuto delle note sarà nascosto</string>
     <string name="widget_content_loading">Caricamento…</string>
-    <string name="notelist_string_info">...</string>
+    <string name="notelist_string_info">…</string>
     <string name="notelist_menu_new">Aggiungi nota</string>
     <string name="note_alert_expired">Scaduto</string>
     <string name="notealert_ok">Ignora</string>
