--- a/Italian/device/cancro/MiuiCamera.apk/res/values-it/strings.xml
+++ b/Italian/device/cancro/MiuiCamera.apk/res/values-it/strings.xml
@@ -263,7 +263,7 @@
     <string name="pano_dialog_panorama_failed">Impossibile salvare panorama</string>
     <string name="pano_dialog_title">Panorama</string>
     <string name="pref_camera_panoramamode_title">Panorama</string>
-    <string name="pano_review_saving_indication_str">Salvataggio...</string>
+    <string name="pano_review_saving_indication_str">Salvataggio…</string>
     <string name="tap_to_focus">Tocca per mettere a fuoco</string>
     <string name="tap_to_exposure">"Tocca per passare all'esposizione manuale."</string>
     <string name="pref_video_effect_default">none</string>
@@ -537,7 +537,7 @@ ed esci dall'inquadratura"</string>
     <string name="cloud_album_details">Dettagli album cloud:</string>
     <string name="visit_cloud_album">Apri album cloud</string>
     <string name="find_cloud_album">Trova un album cloud con QR code</string>
-    <string name="wifi_connecting">Connessione Wi-Fi...</string>
+    <string name="wifi_connecting">Connessione Wi-Fi…</string>
     <string name="wifi_open_fail">Impossibile aprire connessione Wi-Fi</string>
     <string name="wifi_connect_fail">Connessione scaduta o errore della rete Wi-Fi</string>
     <string name="wifi_connect_success">Connesso</string>
