--- a/Italian/device/flo/BackupRestoreConfirmation.apk/res/values-it/strings.xml
+++ b/Italian/device/flo/BackupRestoreConfirmation.apk/res/values-it/strings.xml
@@ -18,9 +18,9 @@ Se non hai richiesto il ripristino, non consentire all'operazione di procedere. 
     <string name="backup_enc_password_text">Inserisci una password da utilizzare per la crittografia dei dati di backup completi. Se non ne inserisci una, verrà utilizzata la tua password di backup corrente:</string>
     <string name="backup_enc_password_optional">Se desideri crittografare tutti i dati di backup, inserisci una password qui di seguito:</string>
     <string name="restore_enc_password_text">Se i dati di ripristino sono crittografati, inserisci la password qui di seguito:</string>
-    <string name="toast_backup_started">Avvio del backup...</string>
+    <string name="toast_backup_started">Avvio del backup…</string>
     <string name="toast_backup_ended">Backup terminato</string>
-    <string name="toast_restore_started">Avvio del ripristino...</string>
+    <string name="toast_restore_started">Avvio del ripristino…</string>
     <string name="toast_restore_ended">Ripristino terminato</string>
     <string name="toast_timeout">"Timeout dell'operazione"</string>
 </resources>
