--- a/Italian/device/flo/XiaomiAuthenticator.apk/res/values-it/strings.xml
+++ b/Italian/device/flo/XiaomiAuthenticator.apk/res/values-it/strings.xml
@@ -105,7 +105,7 @@ Esegui il login su https://account.xiaomi.com e seleziona l'opzione di recupero 
   <string name="password_hint">Prego inserire la tua password</string>
   <string name="privacy_page_url">http://www.xiaomi.com/policies/privacy/</string>
   <string name="privacy_preference_title">Privacy policy</string>
-  <string name="progress_loading">Caricamento in corso...</string>
+  <string name="progress_loading">Caricamento in corso…</string>
   <string name="remove_Xiaomi_account_dialog_message">Rimuovendo questo account &lt;b&gt;perderai la possibilità&lt;/b&gt; di generare dei codici, comunque questo &lt;b&gt;non&lt;/b&gt; disattiverà la verifica in 2 passi. Questo potrebbe impedirti di accedere al tuo account. &lt;p&gt; Prima di procedere con la rimozione: &lt;ul&gt; &lt;li&gt;Disattivare la verifica in 2 passi per questo account, oppure &lt;/li&gt; &lt;li&gt;Assicurati di avere un meccanismo alternativo per la generazione dei codici.&lt;/li&gt; &lt;/ul&gt;</string>
   <string name="remove_account_dialog_button_remove">Rimuovi account</string>
   <string name="remove_account_dialog_message">Rimuovendo questo account &lt;b&gt;perderai la possibilità&lt;/b&gt; di generare dei codici, comunque questo &lt;b&gt;non&lt;/b&gt; disattiverà la verifica in 2 passi. Questo potrebbe impedirti di accedere al tuo account. &lt;p&gt; Prima di procedere con la rimozione: &lt;ul&gt; &lt;li&gt;Disattivare la verifica in 2 passi per questo account, oppure &lt;/li&gt; &lt;li&gt;Assicurati di avere un meccanismo alternativo per la generazione dei codici.&lt;/li&gt; &lt;/ul&gt;</string>
@@ -134,7 +134,7 @@ Esegui il login su https://account.xiaomi.com e seleziona l'opzione di recupero 
   <string name="timesync_sync_now_connectivity_error_dialog_details">Si è verificato un problema nel contattare il server. Si prega di verificare le impostazioni di rete e riprovare.</string>
   <string name="timesync_sync_now_connectivity_error_dialog_title">Sincronizza ora</string>
   <string name="timesync_sync_now_preference_title">Sincronizza ora</string>
-  <string name="timesync_sync_now_progress_dialog_details">Connessione al server in corsa...</string>
+  <string name="timesync_sync_now_progress_dialog_details">Connessione al server in corsa…</string>
   <string name="timesync_sync_now_progress_dialog_title">Sincronizza ora</string>
   <string name="timesync_sync_now_screen_title">Sincronizza ora</string>
   <string name="timesync_sync_now_time_already_correct_dialog_details">"L'orologio interno di Authenticator non è stato modificato perché a quanto pare è già sincronizzato con i server."</string>
