--- a/Italian/device/mocha/CalendarProvider.apk/res/values-it/strings.xml
+++ b/Italian/device/mocha/CalendarProvider.apk/res/values-it/strings.xml
@@ -17,7 +17,7 @@
     <string name="debug_tool_email_body">"In allegato è presente il mio database dell'applicazione Calendario con tutti i miei appuntamenti e le mie informazioni personali. Trattare con cura."</string>
     <string name="holiday_update_title">Nei giorni lavorativi è necessaria una connessione dati per aggiornare</string>
     <string name="holiday_update_summary">Tocca per cercare aggiornamenti</string>
-    <string name="holiday_data_updating">Aggiornamento in corso...</string>
+    <string name="holiday_data_updating">Aggiornamento in corso…</string>
     <string name="holiday_data_update_failed">Cerca errori di aggiornamento e riprova più tardi.</string>
     <string name="holiday_data_update_succeed">Cerca aggiornamenti completi</string>
     <string name="holiday_data_no_network">Rete non disponibile, riprova più tardi</string>
