--- a/Italian/device/mocha/DownloadProviderUi.apk/res/values-it/strings.xml
+++ b/Italian/device/mocha/DownloadProviderUi.apk/res/values-it/strings.xml
@@ -54,7 +54,7 @@
     <string name="confirm_delete_downloads_message">%d download selezionati verranno rimossi</string>
     <string name="confirm_delete_the_download_item_message">Conferma rimozione download</string>
     <string name="delete_the_downloaded_file">Elimina i file scaricati.</string>
-    <string name="downloads_operating">In esecuzione...</string>
+    <string name="downloads_operating">In esecuzione…</string>
     <string name="select_operation_items">Seleziona elementi</string>
     <string name="preferences_title">Impostazioni</string>
     <string name="pref_download_settings_title">Autorizzazione utilizzo dati</string>
