--- a/Italian/device/mocha/ThemeManager.apk/res/values-it/strings.xml
+++ b/Italian/device/mocha/ThemeManager.apk/res/values-it/strings.xml
@@ -8,7 +8,7 @@
     <string name="backup_preference_title">Impostazioni Backup</string>
     <string name="backup_theme_dialog_ok">Backup</string>
     <string name="backup_theme_dialog_message">Backup tema corrente in %1$s</string>
-    <string name="backup_theme_progress_message">Backup in corso, attendere prego...</string>
+    <string name="backup_theme_progress_message">Backup in corso, attendere prego…</string>
     <string name="backup_theme_success_message">Backup tema eseguito correttamente</string>
     <string name="backup_theme_name">Mio backup</string>
     <string name="theme_description_title_default">Predefinito</string>
@@ -67,7 +67,7 @@
     <string name="wallpaper_set_as_destop">Imposta come sfondo</string>
     <string name="wallpaper_set_as_lockscreen">Imposta come lockscreen</string>
     <string name="wallpaper_crop">Taglia</string>
-    <string name="wallpaper_loading_text">Caricamento...</string>
+    <string name="wallpaper_loading_text">Caricamento…</string>
     <string name="wallpaper_decoded_error">Decodifica fallita</string>
     <string name="close">Chiudi</string>
     <string name="download_success">Scaricato correttamente</string>
@@ -136,7 +136,7 @@
     <string name="resource_importing">Importazione</string>
     <string name="online_no_network">Impossibile connettere alla rete</string>
     <string name="online_search_hint">Cerca risorse online</string>
-    <string name="loading">Caricamento...</string>
+    <string name="loading">Caricamento…</string>
     <string name="download_failed">Download fallito</string>
     <string name="download_preview_failed">Impossibile caricare anteprime</string>
     <string name="resource_delete_confirm">Sicuro di voler eliminare questi elementi ?</string>
@@ -163,8 +163,8 @@
     <string name="resource_unable_to_access">"Attualmente
  disponibile per il tuo Paese."</string>
     <string name="resource_list_title">Ultime</string>
-    <string name="resource_get_auth_checking">Ricerca autorizzazioni...</string>
-    <string name="resource_get_auth_retrieving">Recupero autorizzazioni...</string>
+    <string name="resource_get_auth_checking">Ricerca autorizzazioni…</string>
+    <string name="resource_get_auth_retrieving">Recupero autorizzazioni…</string>
     <string name="resource_get_auth_missing">Il tema non è stato scaricato dal market ufficiale, si prega di riscaricarlo uno simile dal market ufficiale.</string>
     <string name="resource_get_auth_exceed_max_limit_title">Limite autorizzazione superato</string>
     <string name="resource_get_auth_exceed_max_limit_tips">Il tema non può essere eseguito su questo dispositivo, hai raggiunto il limite massimo 10 installazioni, si prega di usare su un altro dispositivo</string>
@@ -173,10 +173,10 @@
     <string name="resource_purchase_getting_order">Recupero informazioni ordine…</string>
     <string name="resource_purchase_waiting_payment">In attesa delle informazioni di pagamento…</string>
     <string name="resource_purchase_verifying_payment">Verifica informazioni di pagamento…</string>
-    <string name="deleting">Eliminazione...</string>
+    <string name="deleting">Eliminazione…</string>
     <string name="resource_title_select_ringtone">Seleziona suoneria</string>
     <string name="resource_tip_select_ringtone">Nessuna suoneria selezionata</string>
-    <string name="loading_resource_detail_info">Caricamento delle informazioni...</string>
+    <string name="loading_resource_detail_info">Caricamento delle informazioni…</string>
     <string name="loading_resource_detail_fail">Impossibile caricare la risorsa!</string>
     <string name="resource_expand_full_text">Espandi</string>
     <string name="resource_account_login">Accedi</string>
