--- a/Italian/main/Bluetooth.apk/res/values-it/strings.xml
+++ b/Italian/main/Bluetooth.apk/res/values-it/strings.xml
@@ -42,7 +42,7 @@
     <string name="download_line2">File: %1$s</string>
     <string name="download_line3">Dim. file: %1$s</string>
     <string name="download_line4" />
-    <string name="download_line5">Ricezione file...</string>
+    <string name="download_line5">Ricezione file…</string>
     <string name="download_cancel">Interrompi</string>
     <string name="download_ok">Nascondi</string>
     <string name="download_fail_line1">File non ricevuto</string>
@@ -53,7 +53,7 @@
     <string name="download_succ_ok">Apri</string>
     <string name="upload_line1">A: \"%1$s\"</string>
     <string name="upload_line3">Tipo di file: %1$s (%2$s)</string>
-    <string name="upload_line5">Invio file...</string>
+    <string name="upload_line5">Invio file…</string>
     <string name="upload_succ_line5">File inviato</string>
     <string name="upload_succ_ok">OK</string>
     <string name="upload_fail_line1">Impossibile inviare il file a \"%1$s\".</string>
@@ -67,7 +67,7 @@
     <string name="not_exist_file">Nessun file</string>
     <string name="not_exist_file_desc">"Il file non esiste. 
 "</string>
-    <string name="enabling_progress_title">Attendi...</string>
+    <string name="enabling_progress_title">Attendi…</string>
     <string name="enabling_progress_content">Attivazione Bluetooth…</string>
     <string name="bt_toast_1">"Il file verrà ricevuto. Controlla l'avanzamento nel pannello Notifiche."</string>
     <string name="bt_toast_2">Impossibile ricevere il file.</string>
