--- a/Italian/main/MiWallpaper.apk/res/values-it/strings.xml
+++ b/Italian/main/MiWallpaper.apk/res/values-it/strings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="mi_wallpaper_title">Mi Wallpaper</string>
-    <string name="mi_wallpaper_loading">Caricamento...</string>
+    <string name="mi_wallpaper_loading">Caricamento…</string>
 </resources>
