--- a/Italian/main/MiuiCompass.apk/res/values-it/strings.xml
+++ b/Italian/main/MiuiCompass.apk/res/values-it/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_label">Bussola</string>
-    <string name="getting_location">Ricerca posizione...</string>
+    <string name="getting_location">Ricerca posizione…</string>
     <string name="cannot_get_location">--</string>
     <string name="location_north">N</string>
     <string name="location_south">S</string>
